--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <link rel="stylesheet" href="style.css">
     <button id="button">click me</button>
-    <label id="inputfield">name</label>
+    <input type="text" id="inputfield" name="fname"><br><br>
 </body>
 </html>
